<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/seekbar_deadzone"
        android:title="@string/title_seekbar_deadzone" />

    <item
        android:id="@+id/checkbox_touchscreen_trackpad"
        android:title="@string/title_checkbox_touchscreen_trackpad"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_multi_controller"
        android:title="@string/title_checkbox_multi_controller"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_mouse_nav_buttons"
        android:title="@string/title_checkbox_mouse_nav_buttons"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_usb_driver"
        android:title="@string/title_checkbox_xb1_driver"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_usb_bind_all"
        android:title="@string/title_checkbox_usb_bind_all"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_mouse_emulation"
        android:title="@string/title_checkbox_mouse_emulation"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_vibrate_fallback"
        android:title="@string/title_checkbox_vibrate_fallback"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_flip_face_buttons"
        android:title="@string/title_checkbox_flip_face_buttons"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_absolute_mouse_mode"
        android:title="@string/title_checkbox_absolute_mouse_mode"
        android:checkable="true" />

</menu>