<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/checkbox_unlock_fps"
        android:title="@string/title_unlock_fps"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_disable_warnings"
        android:title="@string/title_checkbox_disable_warnings"
        android:checkable="true" />

    <item
        android:id="@+id/video_format"
        android:title="@string/title_video_format" />

    <item
        android:id="@+id/checkbox_enable_hdr"
        android:title="@string/title_enable_hdr"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_enable_perf_overlay"
        android:title="@string/title_enable_perf_overlay"
        android:checkable="true" />

    <item
        android:id="@+id/checkbox_enable_post_stream_toast"
        android:title="@string/title_enable_post_stream_toast"
        android:checkable="true" />
</menu>